# backend

./: .dockerignore  .env  .gitignore  Makefile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
accounts/: admin.py  models.py  urls.py
accounts/migrations/: 0001_initial.py
cart/: admin.py  models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py
docker/local/django/: Dockerfile
docker/local/django/celery/flower/: start
docker/local/django/celery/worker/: start
docker/local/nginx/: Dockerfile  default.conf
ecommerce_backend/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
ecommerce_backend/settings/: base.py  local.py  production.py
orders/: admin.py  models.py  serializers.py  urls.py  views.py
orders/management/commands/: load_neighborhoods.py
orders/migrations/: 0001_initial.py
products/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  utils.py  views.py
products/migrations/: 0001_initial.py
products/models/: __init__.py  attribute.py  category.py  color.py  image.py  product.py  product_attribute.py  size.py  variant.py
products/tests/: test_product_api.py  test_sample.py
reviews/: admin.py  models.py  serializers.py  views.py
wishlist/: admin.py  models.py  serializers.py  urls.py  views.py
wishlist/migrations/: 0001_initial.py
