[metadata]
name = myproject
version = 0.1.0
description = A Django-based API with Celery and Redis integration
author = Your Name
author_email = your@email.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://yourprojectsite.com
classifiers =
    Programming Language :: Python :: 3
    Framework :: Django
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    Django>=4.0
    djangorestframework
    celery
    redis
    django-cors-headers
    cloudinary
    cloudinary-storage
    gunicorn
    whitenoise
    psycopg2-binary

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    manage = manage:main

[flake8]
max-line-length = 119
exclude = .git,*/migrations/*,*env*,*venv*,__pycache__,*/staticfiles/*,*/mediafiles/*

[coverage:run]
source = .
omit =
    *apps.py,
    *settings.py,
    *urls.py,
    *wsgi.py,
    *asgi.py,
    manage.py,
    conftest.py,
    *base.py,
    *development.py,
    *production.py,
    *__init__.py,
    */migrations/*,
    *tests/*,
    */env/*,
    */venv/*,

[coverage:report]
show_missing = True
